Fixed follow us buttons on smaller screens and phones

--- a/themes/bootstrap3/static/css/style.css
+++ b/themes/bootstrap3/static/css/style.css
@@ -314,6 +314,12 @@ figure.floatcenter, .align-center {
     }
 }
 
+@media (min-width: 768px) {
+    .text-right-sm {
+        text-align: right;
+    }
+}
+
 .vcenter {
     display: flex;
     align-items: center;
